--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -3,8 +3,15 @@
   display: flex;
   flex-direction: column;
   gap: 180px;
-  padding: 140px 40px 0;
+  padding: 140px 0 0;
   overflow: hidden;
+}
+
+@media screen and (max-width: 1279px) {
+  .content {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
 }
 
 @media screen and (max-width: 1023px) {
