--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -1,12 +1,18 @@
 .order {
-  background-image: url("../../assets/images/order-bg.png");
+  background-image: url("../../assets/images/order-bg.webp");
   background-position: top center;
   background-repeat: no-repeat;
-  padding-bottom: 240px;
+  padding-bottom: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 60px;
+}
+
+@media screen and (max-width: 1270px) {
+  .order {
+    background-image: none;
+  }
 }
 
 @media screen and (max-width: 1023px) {
